--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,8 @@
     "typescript": "^3.9.5",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "worker-loader": "^3.0.8"
   },
   "dependencies": {
     "@types/recharts": "^1.8.19",
