--- a/frontend/static/manifest.json
+++ b/frontend/static/manifest.json
@@ -11,7 +11,7 @@
       "sizes": "512x512"
     }
   ],
-  // "start_url": "http://192.168.0.26:3001/",
+  // "start_url": "",
   "shortcuts": [
     {
       "name": "INEMM",
