set start_url and scope to match service worker

--- a/frontend/static/manifest.json
+++ b/frontend/static/manifest.json
@@ -11,7 +11,8 @@
       "sizes": "512x512"
     }
   ],
-  // "start_url": "",
+  "start_url": "..",
+  "scope": "..",
   "shortcuts": [
     {
       "name": "INEMM",
