--- a/frontend/static/manifest.json
+++ b/frontend/static/manifest.json
@@ -9,6 +9,10 @@
     {
       "src": "img/saxophonist_logo.svg",
       "sizes": "512x512"
+    },
+    {
+      "src": "img/icon-512px.png",
+      "sizes": "512x512"
     }
   ],
   "start_url": "..",
