--- a/frontend/static/manifest.json
+++ b/frontend/static/manifest.json
@@ -13,6 +13,11 @@
     {
       "src": "img/icon-512px.png",
       "sizes": "512x512"
+    },
+    {
+      "src": "img/maskable_icon.png",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ],
   "start_url": "..",
