--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
+    "workbox-webpack-plugin": "^6.1.2",
     "worker-loader": "^3.0.8"
   },
   "dependencies": {
