--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^25.2.3",
     "@types/react": "^16.9.36",
+    "@types/react-burger-menu": "^2.8.0",
     "@types/react-color": "^3.0.4",
     "@types/react-dom": "^16.9.8",
     "@types/tinycolor2": "^1.4.2",
@@ -42,6 +43,7 @@
     "ireal-reader": "^1.3.0",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
+    "react-burger-menu": "^3.0.6",
     "react-color": "^2.19.3",
     "react-dom": "^16.13.1",
     "react-icons": "^4.2.0",
