--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "@types/recharts": "^1.8.19",
     "bootstrap": "^4.5.0",
     "ireal-reader": "^1.3.0",
+    "piano-chart": "^1.5.0",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-burger-menu": "^3.0.6",
