--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,7 @@
     "react-color": "^2.19.3",
     "react-dom": "^16.13.1",
     "react-icons": "^4.2.0",
+    "react-piano": "^3.1.3",
     "react-router-dom": "^5.2.0",
     "reactstrap": "^8.9.0",
     "recharts": "^2.0.3",
