--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "@types/recharts": "^1.8.19",
     "bootstrap": "^4.5.0",
+    "idb": "^6.0.0",
     "ireal-reader": "^1.3.0",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
