--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@types/react-burger-menu": "^2.8.0",
     "@types/react-color": "^3.0.4",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.7",
     "@types/tinycolor2": "^1.4.2",
     "copy-webpack-plugin": "^6.3.2",
     "css-loader": "^3.5.3",
