--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack --mode production",
-    "deploy": "webpack --mode production && gh-pages -d dist && git add -A && git commit -m 'uncommitted changes' && git branch -D gh-pages-deployed && git checkout -b gh-pages-deployed && git push -f origin gh-pages-deployed && git checkout -",
+    "deploy": "webpack --mode production && gh-pages -d dist && git add -A && git commit -m 'uncommitted changes' && git branch -D gh-pages-deployed; git checkout -b gh-pages-deployed && git push -f origin gh-pages-deployed && git checkout -",
     "dev": "webpack-dev-server",
     "test": "jest",
     "typecheck": "tsc -p . --noEmit"
